syntax = "proto3";

package greet;

option go_package ="greetpb";

message Greeting{
    string first_name =1;
    string last_name =2;
}

message GreetManyRequest{
    Greeting greeting = 1;
}
message GreetManyResponse{
    string result = 1;
}
service GreetManyService{
    rpc GreetManyTimes(GreetManyRequest) returns (stream GreetManyResponse) {};
} 